<resources>
    <string name="app_name">Eye Test</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_signout">Sign out</string>
    <string name="title_activity_splash">Splash</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="signin">Sign in</string>
    <string name="later">Later</string>
    <string name="signedout">Signed Out</string>
    <string name="welcomeback">Welcome back!</string>
    <string name="connectedtogoogle">Connected to Google+</string>
    <string name="checkinternet">Please check your internet connection</string>
    <string name="error">An error has occurred</string>
    <string name="adshidden">Ads are gone!</string>

    <string-array name="navigation_drawer_items_array">
        <item>Create</item>
        <item>Read</item>
        <item>Help</item>
    </string-array>
    <string name="title_activity_splash3">Splash3</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>


    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--APP INVITES-->
    <string name="sent_invitations_fmt" formatted="false">Sent %d invitations</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="invitation_title">Send Invitation to Friends</string>
    <string name="invitation_message">Download this cool app and beat my score!</string>
    <string name="invitation_deep_link">INVITATION</string>
    <string name="invitation_custom_image">http://dappwall.com/OddColor/icon.png</string>
    <string name="invitation_cta">Download the app!</string>

    <!--NOTIFICATION-->
    <string name="noti_missyou">We Miss You!</string>
    <string name="noti_itstime">It\'s time to break that record and show the world how fast you are!</string>


    <!--MAIN-->
    <string name="main_unknown_soldier">Unknown Soldier</string>
    <string name="main_unknown_soldier_email">unknown.soldier@awesomeness.com</string>
    <string name="main_signinwithgoogle">Sign in with Google+</string>
    <string name="main_eyetest">Eye Test</string>
    <string name="main_sendingemail">Sending email...</string>
    <string name="main_noinstalled_emailclient">No installed email client found</string>
    <string name="main_signout">Sign out</string>
    <string name="main_areyoursure_signout">Are you sure you want to sign out?</string>

    <string name="main_tired">Tired of being unknown?</string>
    <string name="main_tired_text">Sign in with Google+ to set a profile name, save your results in the cloud and compare yourself against other players!</string>



    <!--PAUSE DIALOG IN CLASSIC-->
    <string name="dialog_resume">Resume</string>
    <string name="dialog_home">Home</string>
    <string name="dialog_paused">Game is paused</string>

    <!--CLASSIC, TIMETRIAL-->
    <string name="text_lvl">Lvl</string>
    <string name="button_redraw">REDRAW</string>
    <string name="button_half">HALF</string>
    <string name="newrecord">That\'s a new record!</string>
    <string name="almost">Almost</string>
    <string name="youcandobetterthanthat">You can do better than that!</string>
    <string name="guide_classic">You\'ll be presented a set of squares all in the same color except for one. Find the odd square and advance through as many levels as you can in 60 seconds!\n\nThe more levels you do without help the more bonus time you receive. On the other hand, redrawing and halving the map cost you time!</string>
    <string name="guide_timetrial">You\'ll be presented a set of squares all in the same color except for one. How fast can you advance through all the 10 levels? \n\n In this game redrawing and halving the map is free!</string>
    <string name="classic_signingin">SIGNING IN...</string>
    <string name="classic_signinginwithgoogle">SIGN IN WITH GOOGLE+</string>


    <!--LEADERBOARD-->
    <string name="leaderboard_signin">Please sign in with Google+ to see your record, rank and the date when you were the most awesome.</string>
    <string name="leaderboard_mylevels">Levels</string>
    <string name="leaderboard_myrank">Rank</string>
    <string name="leaderboard_reachedat">Reached at</string>
    <string name="leaderboard_loading">Loading...</string>
    <string name="leaderboard_loadingusers">Loading users...</string>
    <string name="leaderboard_item_name">Name</string>
    <string name="leaderboard_item_date">Reached at</string>
    <string name="leaderboard_item_levels">Levels</string>

    <string name="leaderboard_showsignintext">Please sign in with Google+ to see your record, rank and the date when you were the most awesome.</string>
    <string name="leaderboard_levels">Levels</string>
    <string name="leaderboard_time">Time</string>
    <string name="title_activity_result__classic">Result_Classic</string>

    <string name="facebook_app_id">1071794662861235</string>


    <!-- ADS -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>  <!--test banner ad id-->
    <string name="interstitial_test">a-app-pub-3940256099942544/1033173712</string> <!-- interstitial test ad id-->

    <string name="banner">ca-app-pub-2049750723523644/3933683815</string>
    <string name="Interstitial_Classic">ca-app-pub-2049750723523644/5410417018</string>
    <string name="Interstitial_Timetrial">ca-app-pub-2049750723523644/8363883418</string>

</resources>
