<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lineItem"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="fill_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivUser"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerCrop" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/rl2"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leaderboard_item_name"
                android:textColor="#B8D1DC"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leaderboard_item_date"
                android:textColor="#767676"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/leaderboard_item_levels"
            android:textColor="#DBDBDB"
            android:textSize="19sp" />

    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/rl"
        android:background="#35404B" />



</RelativeLayout>