<RelativeLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/MyToolbarStyle"/>




    <LinearLayout
        android:id="@+id/ll_leaderboard"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:background="#242B31"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/ll_leaderboard_no"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#242B31"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_leaderboard_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"
                android:textColor="#E2E2E2"
                android:text="@string/leaderboard_signin"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_leaderboard_ll_record"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="38sp"
                android:textColor="#FFFDC6"/>

            <TextView
                android:id="@+id/tv_record2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tv_record"
                android:text="@string/leaderboard_mylevels"
                android:textSize="16sp"
                android:textColor="#E2E2E2"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_leaderboard_ll_rank_and_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:textColor="#FFFDC6"/>

                <TextView
                    android:id="@+id/tv_rank2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/tv_record"
                    android:text="@string/leaderboard_myrank"
                    android:textSize="14sp"
                    android:textColor="#E2E2E2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:textColor="#FFFDC6"/>

                <TextView
                    android:id="@+id/tv_date2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/tv_record"
                    android:text="@string/leaderboard_reachedat"
                    android:textSize="14sp"
                    android:textColor="#E2E2E2"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/leaderboard_loading_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#00FFFFFF"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/leaderboard_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/leaderboard_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/leaderboard_loading"
            android:textColor="#1C1C1C" />
    </LinearLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_leaderboard"
        android:background="#1E2429"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/tab_layout"/>

</RelativeLayout>