<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="#FDFDFD"
                tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:background="#37474F"
            android:layout_weight="1" >
            <TextView
                android:text="@string/text_lvl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:id="@+id/tv_level"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#FFFFFF"
            android:layout_weight="1" >
            <com.b2creatived.coloreyetest.Chronometer
                android:id="@+id/chronometer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Chronometer"
                android:textSize="20sp"
                android:textColor="#1C1C1C"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_tags"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_redraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/gamebutton_selector"
            android:layout_weight="1"
            android:text="@string/button_redraw" />

        <Button
            android:id="@+id/btn_half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/gamebutton_selector"
            android:layout_weight="1"
            android:text="@string/button_half" />

    </LinearLayout>

<!--
    <RelativeLayout
        android:id="@+id/ll_pause"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CCFFFFFF"
        android:visibility="gone"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tv_paused"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pauseline"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:textSize="24sp"
            android:text="Paused"/>
        
        <View
            android:id="@+id/pauseline"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="2dp"
            android:layout_centerInParent="true"
            android:background="#297F27"/>

        <TextView
            android:id="@+id/tv_resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pauseline"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textSize="24sp"
            android:text="Resume"/>

</RelativeLayout>-->

    <TextView
        android:id="@+id/tv_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_below="@+id/linear_layout_tags"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/pointsbg"
        android:padding="8dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#CC1212"
        android:text="-1 second"/>

    <ImageView
        android:id="@+id/iv_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:background="@mipmap/b_good"/>


    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
